# comfyui-deploy

./: .gitignore  README.md  analyze_workflow.py  debug_civitai.py  debug_civitai2.py  debug_terms.py  default-packages.json  deploy_workflow.py  generate_report.py  pyproject.toml  setup_comfyui.py  test_civitai.py  test_civitai_search.py  test_hf_api.py  test_single.py  test_workflows.py  workflow-analysis-report.md  workflow_report.py
src/comfyui_deploy/: __init__.py  cli.py  config.py  deployer.py  downloader.py  model_database.py  model_resolver.py  node_database.py  node_installer.py  smart_search.py  workflow_parser.py
tests/: __init__.py  test_downloader.py  test_node_database.py  test_smart_search.py  test_workflow_parser.py
video-workflows/: README.md  hunyan_video.json  txt2ImgLORA.json
workflows/: README.md  image_qwen_image_edit_2509.json
